# crm-log-interaction

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  seed.py
backend/app/agent/: graph.py  llm.py  state.py
backend/app/agent/nodes/: entry.py  responder.py  router.py
backend/app/agent/prompts/: extraction_prompt.py  followup_prompt.py  router_prompt.py
backend/app/agent/tools/: add_hcp.py  compliance_audit.py  compliance_checker.py  edit_interaction.py  email_summary.py  followup_recommendation.py  hcp_lookup.py  log_interaction.py  product_lookup.py  registry.py  sales_summary.py  schedule_followup.py  search_interaction.py
backend/app/api/: routes_agent.py  routes_auth.py  routes_hcp.py  routes_interactions.py
backend/app/core/: logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  hcp.py  interaction.py  product.py  representative.py
backend/app/schemas/: agent.py  hcp.py  interaction.py
backend/app/services/: audit_service.py  hcp_service.py  interaction_service.py
backend/tests/: test_api.py  test_graph_routing.py  test_tools.py
demo/: demo_script.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAgentStream.ts  useDebouncedSearch.ts
frontend/src/pages/: HcpProfilePage.tsx  InteractionHistoryPage.tsx  LogInteractionPage.tsx  LoginPage.tsx  pages.css
frontend/src/store/: store.ts
frontend/src/styles/: globals.css  theme.ts
(+28 files in other folders)
