[project]
name = "crm-log-interaction-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "asyncpg",
  "fastapi",
  "groq",
  "langgraph",
  "pydantic-settings",
  "python-jose[cryptography]",
  "sqlalchemy",
  "uvicorn[standard]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

